# social-graph

./: .gitignore  AGENTS.md  README.md  ideas.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.playwright-mcp/: page-2026-06-22T09-28-53-237Z.yml  page-2026-06-22T09-32-18-140Z.yml  page-2026-06-22T09-34-39-907Z.yml  page-2026-06-22T09-35-53-191Z.yml
docs/plans/: 2026-06-22-extended-person-data-design.md  Termine_panel.md
docs/superpowers/plans/: 2026-06-22-profile-pictures-implementation.md
docs/superpowers/specs/: 2026-06-22-profile-pictures-design.md  2026-06-24-contact-history-design.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_extended_people.sql  0003_add_gender.sql  0004_add_profile_images.sql  0005_add_geocoding.sql  0006_directed_relationships.sql  0007_family_member_inverse_backfill.sql  0008_last_contact.sql  0009_contact_events.sql
src-tauri/src/: commands.rs  db.rs  image.rs  lib.rs  main.rs  models.rs
src/lib/: ContactTimeline.svelte  EdgeForm.svelte  FamilyPanel.svelte  Graph.svelte  ImageCropTool.svelte  MapView.svelte  PersonForm.svelte  PersonModal.svelte  RelationsPanel.svelte  api.js
